[gd_scene load_steps=4 format=3 uid="uid://bv1ttw582858k"]

[ext_resource type="Script" path="res://Screens/start_screen.gd" id="1_qr3dp"]
[ext_resource type="FontFile" uid="uid://2w42oruy1bg2" path="res://Screens/BetterPixels.ttf" id="3_4syll"]
[ext_resource type="Texture2D" uid="uid://cpo1pdudbgoj8" path="res://Screens/start-screen.png" id="3_aa1id"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qr3dp")
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(48, 8)
texture = ExtResource("3_aa1id")
centered = false

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -30.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="ButtonStart" type="Button" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_4syll")
text = "START GAME"

[node name="ButtonThanks" type="Button" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_4syll")
text = "SPECIAL THANKS"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 120.0
offset_top = 192.0
offset_right = 265.0
offset_bottom = 240.0
theme_override_fonts/font = ExtResource("3_4syll")
text = "Created by Ansimuz "

[node name="Link" type="Button" parent="."]
layout_mode = 2
offset_left = 64.0
offset_top = 208.0
offset_right = 288.0
offset_bottom = 229.0
theme_override_fonts/font = ExtResource("3_4syll")
text = "support my work at patreon"

[connection signal="button_down" from="CenterContainer/HBoxContainer/ButtonStart" to="." method="_on_button_start_button_down"]
[connection signal="button_down" from="CenterContainer/HBoxContainer/ButtonThanks" to="." method="_on_button_thanks_button_down"]
[connection signal="button_down" from="Link" to="." method="_on_link_button_down"]
